<resources>
    <string name="app_name">MovieList</string>
    <string name="language">LANGUAGE</string>
    <string name="duration">DURATION</string>
    <string name="booknow">Book now</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="cast">CAST</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="genre">GENRE</string>
    <string name="loading">Please wait...</string>
    <string name="app_no_internet_msg">Internet connection is required!</string>
</resources>