<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_500sdp"
            android:layout_gravity="center"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/image"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/movietitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:text="Movie name" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/synopsis"
                android:textColor="@color/purple_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/moviedescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textColor="@color/colorDarkGray"
                tools:text="Movie description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/genre"
                android:textColor="@color/purple_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textColor="@color/colorDarkGray"
                tools:text="Genre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/language"
                android:textColor="@color/purple_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textColor="@color/colorDarkGray"
                tools:text="Urdu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/duration"
                android:textColor="@color/purple_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:textColor="@color/colorDarkGray"
                tools:text="90 min" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/release_date"
                android:textColor="@color/purple_200"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorGray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bookNow"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/booknow" />
        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>